# rust-axum-rest

./: Cargo.toml  README.md
.sqlx/: query-4643a886e01f7111e63d0136dc63882c7186de86d3a30ca3d00b280c5cdc0ed2.json  query-a65937cc250d94bc40f49bf1d8dbd426f9c4c233aa1e8ff416cd78998265126f.json
migrations/: 20250514121601_create_users_table.sql  20250514121730_create_posts_table.sql
src/: lib.rs  main.rs
src/auth/: jwt.rs  login.rs  mod.rs  password.rs  rbac.rs
src/middleware/: audit.rs  auth_middleware.rs  mod.rs  security_headers.rs
src/models/: post.rs  user.rs
src/services/: error.rs  mod.rs  posts.rs
