[package]
name = "rustrest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
http = "1.0"
thiserror = "1.0"
uuid = { version = "1.5", features = ["serde", "v4"] }

# New dependencies for security
argon2 = { version = "0.5", features = ["password-hash"] }

